# my_pomdoro_app

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
